# successive-convex-programming-opf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/scp_opf_bench/: __init__.py  cli.py  networks.py  nr.py  result.py
src/scp_opf_bench/_legacy/: VVC_OLTC_multi.py  __init__.py  ieee118.py  ieee14.py  ieee1888.py  measure_runtime.py  networks.py  sdp.py  utils.py
src/scp_opf_bench/_legacy/IEEE123Node/: Regulator Data.xls  Transformer Data.xls  capacitor data.xls  line config.xls  line data.xls  switch data.xls
src/scp_opf_bench/methods/: __init__.py  _runner.py  dopf.py  lm_opf.py  nlp.py  scp.py  sdp.py  socp.py
tests/: test_smoke.py
